--- a/POS/SharedApp/Views/Cart/CartView.html
+++ b/POS/SharedApp/Views/Cart/CartView.html
@@ -52,33 +52,33 @@
     </div>
         
     <!--POShackF show collecting input order information function-->
-        <div data-bind="dialog:
+    <div data-bind="dialog:
          {
             title: SC_OrderInfoInputDialogTitle,
             visible: SC_OrderInfoInputDialogVisible,
             closeOnEscButton: false,
          }">
-            <div>
-                <label>Ad Source</label>
+            <div class="msax-FieldPanel">
+                <label style="padding-top: 0px;">Ad Source</label>
                 <select style="width:255px" data-bind="options: SC_AdSourceList,value: SC_AdSourceSelectedOption"></select>
             </div>
-            <div>
-                <label>Zip Code</label>
+            <div class="msax-FieldPanel">
+                <label style="padding-top: 0px;">Zip Code</label>
                 <input id="SC_ZipCodeInput" type="text" style="width:255px" data-bind="value: SC_ZipCode, valueUpdate:'keypress', attr: { 'maxLength': '5', 'rows': '1' }" />
             </div>
-            <div>
-                <label>Primary Sales Person</label>
+            <div class="msax-FieldPanel">
+                <label style="padding-top: 0px;">Primary Sales Person</label>
                 <input id="SC_PrimarySalesPersonInput" type="text" style="width:255px" data-bind="value: SC_PrimarySalesPerson, valueUpdate:'keypress', attr: { 'maxLength': '20', 'rows': '1' }" />
             </div>
-            <div>
+            <div class="msax-FieldPanel">
                 <label>Secondary Sales Person (Optional)</label>
                 <input id="SC_SecondarySalesPersonInput" type="text" style="width:255px" data-bind="value: SC_SecondarySalesPerson, valueUpdate:'keypress', attr: { 'maxLength': '20', 'rows': '1' }" />
             </div>
-            <div>
+            <div class="msax-FieldPanel">
                 <label>Tax Status</label>
                 <select style="width:255px" data-bind="options: SC_TaxStatus,value: SC_TaxStatusSelectedOption"></select>
             </div>
-            <div>
+            <div class="msax-FieldPanel">
                 <label>Order Status</label>
                 <select style="width:255px" data-bind="options: SC_OrderStatus,value: SC_OrderStatusSelectedOption"></select>
 
@@ -109,7 +109,25 @@
             </div>
         </div>
     <!--POShackF end-->
+        
+    <!--POShackF start Delivery instructions-->
+    <div data-bind="dialog:
+         {
+            title: SC_DeliveryInstructionTtile,
+            visible: SC_DeliveryInstructionDialogVisible,
+            closeOnEscButton: true,
+            buttonClick: SC_DeliveryInstructionDialogButtonClick,
+            buttons: [
+            { label: Commerce.ViewModelAdapter.getResourceString('string_75'), operationId: Commerce.Controls.Dialog.OperationIds.OK_BUTTON_CLICK, isPrimary: true },
+            { label: Commerce.ViewModelAdapter.getResourceString('string_107'), operationId: Commerce.Controls.Dialog.OperationIds.CANCEL_BUTTON_CLICK, isPrimary: false }
+            ]
+         }">
+        <div>
+            <input id="SC_DeliveryInstructionInput" type="text" style="width:255px" data-bind="value: SC_DeliveryInstruction, valueUpdate:'keypress', attr: { 'maxLength': '200', 'rows': '3' }" />
+        </div>
 
+    </div>
+        <!--POShackF end-->
     <!-- Change Dialog -->
         <div data-bind="
             dialog: {
